give header and footer min height and fix alignment issues

--- a/Shopping-Cart/src/styles/shopPage.css
+++ b/Shopping-Cart/src/styles/shopPage.css
@@ -8,17 +8,18 @@
 
 header {
   background-color: #ffffff;
-  height: 200px;
+  min-height: 130px;
   justify-self: flex-start;
   display: flex;
   justify-content: space-between;
   align-items: center;
   border-bottom: 5px solid black;
+  padding: 0 10px;
 }
 
 header > a {
   display: flex;
-  margin-left: 10px;
+  margin-top: 15px !important;
 }
 
 header > a > img {
@@ -38,6 +39,6 @@ footer {
   box-sizing: border-box;
   border-top: 5px solid black;
   background-color: rgb(255, 255, 255);
-  height: 50px;
+  min-height: 50px;
   justify-self: flex-end;
 }
